Made the plugin use javascript instead of coffescript

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "context-add-imports",
-  "main": "./lib/context-add-imports",
+  "main": "./lib/main",
   "version": "0.0.0",
   "description": "This package will add the text surrounding your cursor to the globals or imports of the current file",
   "keywords": [
