--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "description": "This package will add the text surrounding your cursor to the globals or imports of the current file",
   "keywords": [
+    "imports"
   ],
   "activationCommands": {
     "atom-workspace": "context-add-imports:addImport"
   },
-  "repository": "https://github.com/atom/context-add-imports",
+  "repository": "https://github.com/Matthew-Smith/atom-context-add-imports",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
