--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "imports"
   ],
   "activationCommands": {
-    "atom-workspace": "context-add-imports:addImport"
+    "atom-workspace": "context-add-imports: Add Import",
+    "atom-workspace": "context-add-imports: Organize Imports"
   },
   "repository": "https://github.com/Matthew-Smith/atom-context-add-imports",
   "license": "MIT",
