--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "context-add-imports",
+  "name": "manage-globals",
   "main": "./lib/main",
   "version": "0.2.0",
-  "description": "This package will add the text surrounding your cursor to the globals or imports of the current file",
+  "description": "This package will add the text surrounding your cursor to the globals or globals of the current file",
   "keywords": [
-    "imports"
+    "globals"
   ],
   "activationCommands": {
-    "atom-workspace": "context-add-imports: Organize Imports"
+    "atom-workspace": "manage-globals: Organize Globals"
   },
   "repository": "https://github.com/Matthew-Smith/atom-context-add-imports",
   "license": "MIT",
